# wlan-dumper

./: .gitignore  LICENSE  README.md  cyberm4fia.sh  mypy.ini  pyproject.toml  run.py  wlan-dumper.sh
.github/workflows/: ci.yml
captures/handshakes/: .gitkeep
docs/superpowers/plans/: 2026-05-27-cyberm4fia-wifi-phase2a.md  2026-05-27-wlan-dumper-phase2a.md
docs/superpowers/specs/: 2026-05-27-cyberm4fia-wifi-design.md  2026-05-27-cyberm4fia-wifi-phase2a-design.md  2026-05-27-wlan-dumper-design.md  2026-05-27-wlan-dumper-phase2a-design.md  2026-05-28-wlan-dumper-phase3a-design.md
scripts/: install-8822bu-driver.sh
src/cyberm4fia_wifi/: __init__.py  __main__.py  cli.py
src/cyberm4fia_wifi/core/: adapter.py  auth.py  events.py  hopper.py  session.py  sniffer.py
src/cyberm4fia_wifi/plugins/: __init__.py  base.py  deauth.py  handshake.py  scan.py
src/cyberm4fia_wifi/tui/: app.py  modals.py
src/cyberm4fia_wifi/utils/: eapol.py  hcxtools.py  oui.py  paths.py  pcap_writer.py
src/wlan_dumper/: __init__.py  __main__.py  cli.py
src/wlan_dumper/core/: auth.py  crack.py  events.py  hopper.py  session.py  sniffer.py
src/wlan_dumper/plugins/: __init__.py  base.py  crack.py  deauth.py  handshake.py  scan.py
src/wlan_dumper/tui/: app.py  modals.py
src/wlan_dumper/utils/: aircrack.py  eapol.py  hashcat.py  oui.py  paths.py  pcap_writer.py
tests/: conftest.py
tests/unit/core/: test_adapter.py  test_auth.py  test_cli.py  test_crack.py  test_crack_backends.py  test_crack_plugin.py  test_deauth_plugin.py  test_eapol_utils.py  test_events.py  test_handshake_modal.py  test_handshake_plugin.py  test_hcxtools.py  test_hopper.py  test_interactive_picker.py  test_oui_and_extras.py  test_pcap_writer.py  test_scan_plugin.py  test_session.py  test_sniffer.py  test_tui_smoke.py
